--- a/api_src/root.yaml
+++ b/api_src/root.yaml
@@ -24,7 +24,7 @@ info:
 
     # Example Code
 
-    User's have provided example code for working the API in the following languages:
+    Users have provided example code for working the API in the following languages:
 
       - [AWS Lambda - python](https://github.com/tbowers/python-podcastindex-org-lambda)
       - [C#](https://github.com/ComicStrip/csharp-podcastindex-org-example)
