Add podcasts/trending endpoint
Resolves #48

--- a/api_src/root.yaml
+++ b/api_src/root.yaml
@@ -142,6 +142,8 @@ paths:
     $ref: 'paths/podcasts/byitunesid.yaml'
   '/podcasts/bytag':
     $ref: 'paths/podcasts/bytag.yaml'
+  '/podcasts/trending':
+    $ref: 'paths/podcasts/trending.yaml'
   '/podcasts/dead':
     $ref: 'paths/podcasts/dead.yaml'
   '/episodes/byfeedid':
