--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -284,25 +284,16 @@ components:
         type: boolean
       allowEmptyValue: true
       required: true
-    id_feed_episode_pi:
-      name: id
+    max:
+      name: max
       in: query
-      description: >
-        The PodcastIndex Feed ID or IDs to search for.
-
-
-        If searching for multiple IDs, separate values with a comma. A maximum
-        of 200 IDs can be provided.
-      required: true
+      description: |
+        Maximum number of results to return.
       schema:
-        type: string
-      examples:
-        single:
-          value: 75075
-          description: Single ID
-        multiple:
-          value: '41504,920666'
-          description: Multiple IDs
+        type: integer
+        minimum: 1
+        maximum: 1000
+      example: 10
     since:
       name: since
       in: query
@@ -319,36 +310,6 @@ components:
         seconds:
           value: -100000
           description: Seconds from now
-    max:
-      name: max
-      in: query
-      description: |
-        Maximum number of results to return.
-      schema:
-        type: integer
-        minimum: 1
-        maximum: 1000
-      example: 10
-    id_episode_pi:
-      name: id
-      in: query
-      description: |
-        The PodcastIndex episode ID to search for.
-      required: true
-      schema:
-        type: integer
-      example: 16795089
-    max_random:
-      name: max
-      in: query
-      description: |
-        Maximum number of results to return.
-      schema:
-        type: integer
-        default: 1
-        minimum: 1
-        maximum: 1000
-      example: 2
     lang:
       name: lang
       in: query
@@ -456,6 +417,45 @@ components:
         multiple_mixed:
           value: 'News,65'
           description: Multiple Categories Mixed Format
+    id_feed_episode_pi:
+      name: id
+      in: query
+      description: >
+        The PodcastIndex Feed ID or IDs to search for.
+
+
+        If searching for multiple IDs, separate values with a comma. A maximum
+        of 200 IDs can be provided.
+      required: true
+      schema:
+        type: string
+      examples:
+        single:
+          value: 75075
+          description: Single ID
+        multiple:
+          value: '41504,920666'
+          description: Multiple IDs
+    id_episode_pi:
+      name: id
+      in: query
+      description: |
+        The PodcastIndex episode ID to search for.
+      required: true
+      schema:
+        type: integer
+      example: 16795089
+    max_random:
+      name: max
+      in: query
+      description: |
+        Maximum number of results to return.
+      schema:
+        type: integer
+        default: 1
+        minimum: 1
+        maximum: 1000
+      example: 2
     max_recent_episodes:
       name: max
       in: query
@@ -1381,6 +1381,57 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/feed_bytag'
+    newestItemPublishedTime:
+      description: |
+        The date and time the most recent episode in the feed was published
+      type: integer
+      format: Unix Epoch
+      example: 1546399813
+    trendScore:
+      description: |
+        The ranking for how the podcast is trending in the index
+      type: integer
+      example: 1
+    feed_trending:
+      type: object
+      properties:
+        id:
+          $ref: '#/components/schemas/id_feed'
+        url:
+          $ref: '#/components/schemas/url_feed'
+        title:
+          $ref: '#/components/schemas/title_feed'
+        author:
+          $ref: '#/components/schemas/author'
+        image:
+          $ref: '#/components/schemas/image_feed'
+        newestItemPublishedTime:
+          $ref: '#/components/schemas/newestItemPublishedTime'
+        itunesId:
+          $ref: '#/components/schemas/itunesId_feed'
+        trendScore:
+          $ref: '#/components/schemas/trendScore'
+        language:
+          $ref: '#/components/schemas/language'
+        categories:
+          $ref: '#/components/schemas/categories'
+    feeds_trending:
+      description: |
+        List of feeds matching request
+      type: array
+      items:
+        $ref: '#/components/schemas/feed_trending'
+    max:
+      description: |
+        Value of `max` parameter passed to request.
+      type: integer
+      example: 2
+    since:
+      description: |
+        Value of `since` parameter passed to request.
+      type: integer
+      format: Unix Epoch
+      example: 1613805249
     feed_dead:
       type: object
       properties:
@@ -1627,11 +1678,6 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/item_podcast_random'
-    max:
-      description: |
-        Value of `max` parameter passed to request.
-      type: integer
-      example: 2
     item_podcast_recent:
       type: object
       properties:
@@ -1683,12 +1729,6 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/item_podcast_recent'
-    newestItemPublishedTime:
-      description: |
-        The date and time the most recent episode in the feed was published
-      type: integer
-      format: Unix Epoch
-      example: 1546399813
     feeds_recent:
       description: |
         List of feeds matching request
@@ -1710,12 +1750,6 @@ components:
             $ref: '#/components/schemas/language'
           categories:
             $ref: '#/components/schemas/categories'
-    since:
-      description: |
-        Value of `since` parameter passed to request.
-      type: integer
-      format: Unix Epoch
-      example: 1613805249
     timeAdded:
       description: |
         The date and time the feed was added to the index
@@ -1916,6 +1950,25 @@ components:
                 $ref: '#/components/schemas/feeds_bytag'
               count:
                 $ref: '#/components/schemas/count'
+              description:
+                $ref: '#/components/schemas/description_response'
+    podcasts_trending:
+      description: Success
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              status:
+                $ref: '#/components/schemas/status'
+              feeds:
+                $ref: '#/components/schemas/feeds_trending'
+              count:
+                $ref: '#/components/schemas/count'
+              max:
+                $ref: '#/components/schemas/max'
+              since:
+                $ref: '#/components/schemas/since'
               description:
                 $ref: '#/components/schemas/description_response'
     podcasts_dead:
@@ -2496,6 +2549,35 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/podcasts_bytag'
+        '401':
+          $ref: '#/components/responses/401'
+  /podcasts/trending:
+    get:
+      tags:
+        - Podcasts
+      summary: Trending
+      description: >
+        This call returns the podcasts/feeds that in the index that are
+        trending.
+
+
+        Example: https://api.podcastindex.org/api/1.0/podcasts/trending?pretty
+      operationId: podcasts/trending
+      security:
+        - API Key: []
+          User Agent: []
+          Date: []
+          Authorization: []
+      parameters:
+        - $ref: '#/components/parameters/max'
+        - $ref: '#/components/parameters/since'
+        - $ref: '#/components/parameters/lang'
+        - $ref: '#/components/parameters/cat'
+        - $ref: '#/components/parameters/notcat'
+        - $ref: '#/components/parameters/pretty'
+      responses:
+        '200':
+          $ref: '#/components/responses/podcasts_trending'
         '401':
           $ref: '#/components/responses/401'
   /podcasts/dead:
