--- a/api_src/paths/episodes/byfeedid.yaml
+++ b/api_src/paths/episodes/byfeedid.yaml
@@ -15,10 +15,7 @@ get:
       - Includes `persons`: https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=169991&pretty
   operationId: episodes/byfeedid
   security:
-    - API Key: []
-      User Agent: []
-      Date: []
-      Authorization: []
+    - $ref: '../../components/security/security.yaml'
   parameters:
     - $ref: '../../components/parameters/id_feed_episode_pi.yaml'
     - $ref: '../../components/parameters/since.yaml'
