--- a/api_src/paths/add/batch/byfeedurl.yaml
+++ b/api_src/paths/add/batch/byfeedurl.yaml
@@ -21,10 +21,7 @@ post:
     Example: https://api.podcastindex.org/api/1.0/add/batch/byfeedurl?pretty
   operationId: add/batch/byfeedurl
   security:
-    - API Key: []
-      User Agent: []
-      Date: []
-      Authorization: []
+    - $ref: '../../components/security/security.yaml'
   parameters:
     - $ref: '../../../components/parameters/pretty.yaml'
   requestBody:
