--- a/api_src/paths/episodes/byid.yaml
+++ b/api_src/paths/episodes/byid.yaml
@@ -10,10 +10,7 @@ get:
     Example: https://api.podcastindex.org/api/1.0/episodes/byid?id=16795090&pretty
   operationId: episodes/byid
   security:
-    - API Key: []
-      User Agent: []
-      Date: []
-      Authorization: []
+    - $ref: '../../components/security/security.yaml'
   parameters:
     - $ref: '../../components/parameters/id_episode_pi.yaml'
     - $ref: '../../components/parameters/fulltext.yaml'
