--- a/api_src/paths/podcasts/dead.yaml
+++ b/api_src/paths/podcasts/dead.yaml
@@ -10,10 +10,7 @@ get:
     Example: https://api.podcastindex.org/api/1.0/podcasts/dead?pretty
   operationId: podcasts/dead
   security:
-    - API Key: []
-      User Agent: []
-      Date: []
-      Authorization: []
+    - $ref: '../../components/security/security.yaml'
   parameters:
     - $ref: '../../components/parameters/pretty.yaml'
   responses:
