--- a/api_src/paths/search/byterm.yaml
+++ b/api_src/paths/search/byterm.yaml
@@ -13,10 +13,7 @@ get:
     Example: https://api.podcastindex.org/api/1.0/search/byterm?q=batman+university&pretty
   operationId: search/byterm
   security:
-    - API Key: []
-      User Agent: []
-      Date: []
-      Authorization: []
+    - $ref: '../../components/security/security.yaml'
   parameters:
     - $ref: '../../components/parameters/q.yaml'
     - $ref: '../../components/parameters/val.yaml'
