--- a/api_src/paths/stats/current.yaml
+++ b/api_src/paths/stats/current.yaml
@@ -10,10 +10,7 @@ get:
     Example: https://api.podcastindex.org/api/1.0/stats/current?pretty
   operationId: stats/current
   security:
-    - API Key: []
-      User Agent: []
-      Date: []
-      Authorization: []
+    - $ref: '../../components/security/security.yaml'
   parameters:
     - $ref: '../../components/parameters/pretty.yaml'
   responses:
