--- a/api_src/paths/value/byfeedid.yaml
+++ b/api_src/paths/value/byfeedid.yaml
@@ -14,10 +14,7 @@ get:
       - https://api.podcastindex.org/api/1.0/value/byfeedid?id=779873&pretty
   operationId: value/byfeedid
   security:
-    - API Key: []
-      User Agent: []
-      Date: []
-      Authorization: []
+    - $ref: '../../components/security/security.yaml'
   parameters:
     - $ref: '../../components/parameters/id_feed_episode_pi_single.yaml'
     - $ref: '../../components/parameters/pretty.yaml'
