--- a/api_src/paths/value/byfeedurl.yaml
+++ b/api_src/paths/value/byfeedurl.yaml
@@ -13,10 +13,7 @@ get:
       - https://api.podcastindex.org/api/1.0/value/byfeedurl?url=https://lespoesiesdheloise.fr/@heloise/feed.xml&pretty
   operationId: value/byfeedurl
   security:
-    - API Key: []
-      User Agent: []
-      Date: []
-      Authorization: []
+    - $ref: '../../components/security/security.yaml'
   parameters:
     - $ref: '../../components/parameters/url.yaml'
     - $ref: '../../components/parameters/pretty.yaml'
