Add support for `/categories/list`
Resolves #47

--- a/api_src/components/properties/categories.yaml
+++ b/api_src/components/properties/categories.yaml
@@ -3,8 +3,7 @@ description: >
   An array of categories, where the index is the Category ID and the value is the Category Name.
 
 
-  Category numbers and names can be found in the
-  [Podcast Namespace documentation](https://github.com/Podcastindex-org/podcast-namespace/blob/main/categories.json)
+  All Category numbers and names are returned by the `categories/list` endpoint.
 type: object
 example:
   104: "Tv"
