--- a/.editorconfig
+++ b/.editorconfig
@@ -15,5 +15,10 @@ indent_size = 2
 [*.json]
 indent_size = 2
 
+# change format to match format produced by Postman
+[{*.postman_collection.json,*.postman_environment.json}]
+indent_size = 4
+indent_style = tab
+
 [{*.md,*.markdown}]
 indent_size = 2
