Add support for `/hub/pubnotify`
Resolves #49

--- a/api_src/components/parameters/id_feed_podcast_pi.yaml
+++ b/api_src/components/parameters/id_feed_podcast_pi.yaml
@@ -2,7 +2,7 @@ name: id
 in: query
 # language=Markdown
 description: >
-  The PodcastIndex Feed ID to search for
+  The PodcastIndex Feed ID
 required: true
 schema:
   type: integer
