--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.2
 info:
-  version: 1.4.0
+  version: 1.5.0
   title: PodcastIndex.org API
   termsOfService: 'https://api.podcastindex.org/tos_v1.0.html'
   contact:
@@ -116,6 +116,9 @@ tags:
   - name: Categories
     description: |
       Categories used by the Podcast Index
+  - name: Hub
+    description: |
+      Notify the index that a feed has changed
   - name: Add
     description: >
       Add new podcast feeds to the index.
@@ -248,7 +251,7 @@ components:
       name: id
       in: query
       description: |
-        The PodcastIndex Feed ID to search for
+        The PodcastIndex Feed ID
       required: true
       schema:
         type: integer
@@ -525,6 +528,16 @@ components:
       schema:
         type: integer
       example: 75075
+    update:
+      name: update
+      in: query
+      description: |
+        If present, tells the index to re-parse the feed.
+
+        Parameter shall not have a value
+      schema:
+        type: boolean
+      allowEmptyValue: true
     chash:
       name: chash
       in: query
@@ -1886,6 +1899,11 @@ components:
   responses:
     '401':
       description: Not authenticated
+      content:
+        application/json:
+          schema:
+            type: string
+          example: Authorization header value either not set or blank.
     search_byterm:
       description: Success
       content:
@@ -2223,6 +2241,17 @@ components:
                 $ref: '#/components/schemas/feeds_categories'
               count:
                 $ref: '#/components/schemas/count'
+              description:
+                $ref: '#/components/schemas/description_response'
+    hub_pubnotify:
+      description: Success
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              status:
+                $ref: '#/components/schemas/status'
               description:
                 $ref: '#/components/schemas/description_response'
     add_byfeedurl:
@@ -3011,6 +3040,33 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/categories_list'
+        '401':
+          $ref: '#/components/responses/401'
+  /hub/pubnotify:
+    get:
+      tags:
+        - Hub
+      summary: Pub Notify
+      description: |
+        Notify the index that a feed has changed
+
+        Examples:
+
+          - https://api.podcastindex.org/api/1.0/hub/pubnotify?id=920666&pretty
+          - https://api.podcastindex.org/api/1.0/hub/pubnotify?id=920666&update&pretty
+      operationId: hub/pubnotify
+      security:
+        - API Key: []
+          User Agent: []
+          Date: []
+          Authorization: []
+      parameters:
+        - $ref: '#/components/parameters/id_feed_podcast_pi'
+        - $ref: '#/components/parameters/update'
+        - $ref: '#/components/parameters/pretty'
+      responses:
+        '200':
+          $ref: '#/components/responses/hub_pubnotify'
         '401':
           $ref: '#/components/responses/401'
   /add/byfeedurl:
