Add 400 response to responses list

--- a/api_src/paths/add/byfeedurl.yaml
+++ b/api_src/paths/add/byfeedurl.yaml
@@ -24,6 +24,8 @@ get:
       $ref: '../../components/responses/add_byfeedurl.yaml'
     '302':
       $ref: '../../components/responses/add_byfeedurl.yaml'
+    '400':
+      $ref: '../../components/responses/400.yaml'
     '401':
       $ref: '../../components/responses/401.yaml'
 post:
@@ -51,5 +53,7 @@ post:
       $ref: '../../components/responses/add_byfeedurl.yaml'
     '302':
       $ref: '../../components/responses/add_byfeedurl.yaml'
+    '400':
+      $ref: '../../components/responses/400.yaml'
     '401':
       $ref: '../../components/responses/401.yaml'
