--- a/api_src/paths/podcasts/byitunesid.yaml
+++ b/api_src/paths/podcasts/byitunesid.yaml
@@ -17,5 +17,7 @@ get:
   responses:
     '200':
       $ref: '../../components/responses/podcasts_byitunesid.yaml'
+    '400':
+      $ref: '../../components/responses/400.yaml'
     '401':
       $ref: '../../components/responses/401.yaml'
