--- a/api_src/paths/episodes/byfeedid.yaml
+++ b/api_src/paths/episodes/byfeedid.yaml
@@ -25,5 +25,7 @@ get:
   responses:
     '200':
       $ref: '../../components/responses/episodes_byfeedid.yaml'
+    '400':
+      $ref: '../../components/responses/400.yaml'
     '401':
       $ref: '../../components/responses/401.yaml'
