--- a/api_src/paths/episodes/byid.yaml
+++ b/api_src/paths/episodes/byid.yaml
@@ -18,5 +18,7 @@ get:
   responses:
     '200':
       $ref: '../../components/responses/episodes_byid.yaml'
+    '400':
+      $ref: '../../components/responses/400.yaml'
     '401':
       $ref: '../../components/responses/401.yaml'
