--- a/api_src/paths/episodes/random.yaml
+++ b/api_src/paths/episodes/random.yaml
@@ -24,5 +24,7 @@ get:
   responses:
     '200':
       $ref: '../../components/responses/episodes_random.yaml'
+    '400':
+      $ref: '../../components/responses/400.yaml'
     '401':
       $ref: '../../components/responses/401.yaml'
