--- a/api_src/paths/search/byperson.yaml
+++ b/api_src/paths/search/byperson.yaml
@@ -22,5 +22,7 @@ get:
   responses:
     '200':
       $ref: '../../components/responses/search_byperson.yaml'
+    '400':
+      $ref: '../../components/responses/400.yaml'
     '401':
       $ref: '../../components/responses/401.yaml'
