--- a/api_src/paths/search/byterm.yaml
+++ b/api_src/paths/search/byterm.yaml
@@ -23,6 +23,8 @@ get:
   responses:
     '200':
       $ref: '../../components/responses/search_byterm.yaml'
+    '400':
+      $ref: '../../components/responses/400.yaml'
     '401':
       $ref: '../../components/responses/401.yaml'
   x-codeSamples:
