--- a/api_src/paths/value/byfeedid.yaml
+++ b/api_src/paths/value/byfeedid.yaml
@@ -21,5 +21,7 @@ get:
   responses:
     '200':
       $ref: '../../components/responses/value_byfeedid.yaml'
+    '400':
+      $ref: '../../components/responses/400.yaml'
     '401':
       $ref: '../../components/responses/401.yaml'
