--- a/api_src/paths/value/byfeedurl.yaml
+++ b/api_src/paths/value/byfeedurl.yaml
@@ -20,5 +20,7 @@ get:
   responses:
     '200':
       $ref: '../../components/responses/value_byfeedurl.yaml'
+    '400':
+      $ref: '../../components/responses/400.yaml'
     '401':
       $ref: '../../components/responses/401.yaml'
