Add missing properties to existing responses

--- a/api_src/components/properties/feed_itunes.yaml
+++ b/api_src/components/properties/feed_itunes.yaml
@@ -51,3 +51,5 @@ properties:
     $ref: '../properties/parseErrors.yaml'
   locked:
     $ref: '../properties/locked.yaml'
+  funding:
+    $ref: '../properties/funding.yaml'
