--- a/api_src/components/properties/feed_podcast.yaml
+++ b/api_src/components/properties/feed_podcast.yaml
@@ -5,6 +5,8 @@ type: object
 properties:
   id:
     $ref: '../properties/id_feed.yaml'
+  podcastGuid:
+    $ref: '../properties/podcastGuid.yaml'
   title:
     $ref: '../properties/title_feed.yaml'
   url:
