--- a/api_src/components/properties/feeds_recent.yaml
+++ b/api_src/components/properties/feeds_recent.yaml
@@ -13,6 +13,8 @@ items:
       $ref: '../properties/title_feed.yaml'
     newestItemPublishedTime:
       $ref: '../properties/newestItemPublishedTime.yaml'
+    oldestItemPublishTime:
+      $ref: '../properties/oldestItemPublishTime.yaml'
     itunesId:
       $ref: '../properties/itunesId_feed.yaml'
     language:
