--- a/api_src/components/schemas/feed_dead.yaml
+++ b/api_src/components/schemas/feed_dead.yaml
@@ -2,5 +2,7 @@ type: object
 properties:
   id:
     $ref: '../properties/id_feed.yaml'
+  title:
+    $ref: '../properties/title_feed.yaml'
   url:
     $ref: '../properties/url_feed.yaml'
