--- a/api_src/components/schemas/feed_trending.yaml
+++ b/api_src/components/schemas/feed_trending.yaml
@@ -6,6 +6,8 @@ properties:
     $ref: '../properties/url_feed.yaml'
   title:
     $ref: '../properties/title_feed.yaml'
+  description:
+    $ref: '../properties/description_feed.yaml'
   author:
     $ref: '../properties/author.yaml'
   image:
